# self-command-tool

./: Cargo.toml  README.md
src/: main.rs
src/clash/: mod.rs
src/clipboard/: mod.rs
src/ui/: mod.rs
src/v2fly/: mod.rs  v2fly_config.rs
