[package]
name = "cm"
version = "0.1.0"
authors = ["timzaak <zsy.evan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hocon = "0.3.7"
#serde = { version = "1.0.116", features= ["derive"] }
clap = "3.0.0-beta.2"

warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features=["full"] }
base64 = "0.13.0"

tui = {version = "*", default-features= false, features=['crossterm', 'serde']}
crossterm = "*"
anyhow = "*"

serde = {version ="1.0", features=["derive"]}
serde_json = "1.0"
json-patch = "*"

serde_yaml = "*"


log = "0.4"
pretty_env_logger = "0.4"

clipboard = "0.5"
bytes = "1.0.1"

